--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "prisma": "prisma",
     "vercel-build": "prisma generate && prisma db push --accept-data-loss && next build"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "@prisma/client": "^5.19.0",
     "@supabase/supabase-js": "^2.86.0",
     "@types/bcrypt": "^6.0.0",
     "axios": "^1.7.7",
@@ -31,7 +31,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "prisma": "^5.19.0",
     "tailwindcss": "^4.0.0-alpha.32",
     "typescript": "^5"
   }
