--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "buildCommand": "prisma generate && next build",
+    "buildCommand": "next build",
     "crons": [
         {
             "path": "/api/cron/news",
