--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-    "buildCommand": "next build",
-    "crons": [
-        {
-            "path": "/api/cron/news",
-            "schedule": "0 0 * * *"
-        }
-    ]
+    "buildCommand": "next build"
 }
